# trigres

./: CMakeLists.txt  LICENSE  README.md
include/: trigo.hpp  util.hpp
lib/cli/: cli.cpp  cli.hpp
lib/util/: trigo.cpp  trigo.hpp  util.cpp  util.hpp
src/: main.cpp  trigo.cpp  util.cpp
